# Luma

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_EN.md  BLUEPRINT.md  CMakeLists.txt  Clean.ps1  EditorEntry.cpp  EngineEntry.h  ExternalCmakeLists.txt  Game.rc  GameEntry.cpp  LICENSE  Luma_CAPI.cpp  Luma_CAPI.h  README.md  README_EN.md  TODO_LIST  android-ndk.toolchain.cmake  doxyfile  imgui.ini  main.cpp  testMain.cpp  thread_unsafe_report.txt
.claude/: settings.local.json
.devin/: wiki.json
AIServices/include/: ChatBot.h  Configure.h  Utils.h
AIServices/src/: Utils.cpp
Android/app/: build.gradle.kts
Application/: ApplicationBase.cpp  ApplicationBase.h  AudioManager.cpp  AudioManager.h  Debug.Test.h  Editor.cpp  Editor.h  Game.cpp  Game.h  ImGuiRenderer.cpp  ImGuiRenderer.h  LayerManager.h  PreferenceSettings.cpp  PreferenceSettings.h  ProjectSettings.cpp  ProjectSettings.h  Renderable.h  RenderableManager.cpp  RenderableManager.h  SceneManager.cpp  SceneManager.h  SceneRenderer.cpp  SceneRenderer.h  TagManager.h  Window.cpp  Window.h
Application/Editor/: AIPanel.cpp  AIPanel.h  AITool.cpp  AITool.h  AnimationControllerEditorPanel.cpp  AnimationControllerEditorPanel.h  AnimationEditorPanel.cpp  AnimationEditorPanel.h  AssetBrowserPanel.cpp  AssetBrowserPanel.h  AssetInspectorPanel.cpp  AssetInspectorPanel.h  BlueprintPanel.cpp  BlueprintPanel.h  ConsolePanel.cpp  ConsolePanel.h  EditorContext.h  GameViewPanel.cpp  GameViewPanel.h  HierarchyPanel.cpp  HierarchyPanel.h  IEditorPanel.h  InspectorPanel.cpp  InspectorPanel.h  PluginManagerPanel.cpp  PluginManagerPanel.h  RuleTilePanel.cpp  RuleTilePanel.h  SceneViewPanel.cpp  TilesetPanel.h  (+10 more)
Components/: ActivityComponent.h  AmbientZoneComponent.h  AnimationControllerComponent.h  AreaLightComponent.h  AssetHandle.h  AudioComponent.h  ChunkWorldComponent.h  ColliderComponent.h  ComponentRegistry.cpp  ComponentRegistry.h  Core.h  DirectionalLightComponent.h  IComponent.h  IDComponent.h  InteractionEvents.h  LayerComponent.h  LightProbeComponent.h  LightingSettingsComponent.h  LightingTypes.h  NavAgentComponent.h  ParticleComponent.h  PixelWorldComponent.h  PointLightComponent.h  PostProcessSettingsComponent.h  PrefabComponent.h  QualitySettingsComponent.h  RelationshipComponent.h  Rigidbody.h  ScriptComponent.cpp  ScriptComponent.h  ShadowCasterComponent.h  SpotLightComponent.h  Sprite.h  SubSceneComponent.h  TagComponent.h  TextComponent.h  TilemapComponent.h  Transform.h  UIComponents.h
Data/: AnimationClip.h  AnimationControllerData.h  AssetImporterRegistry.cpp  AssetImporterRegistry.h  BlueprintData.h  BlueprintNodeRegistry.cpp  BlueprintNodeRegistry.h  EngineContext.h  IData.h  MaterialData.h  ParticleData.h  PhysicsMaterial.h  PrefabData.h  RaycastResult.h  RuleTile.h  SceneData.h  ShaderData.h  TextureImporterSettings.h  ThreadSafetyVector.cpp  ThreadSafetyVector.h  Tile.h  Tileset.h
Event/: EventBus.h  Events.h  JobSystem.cpp  JobSystem.h  LumaEvent.h
IDEPlugins/: VS_Debug_Plugin.vsix
Input/: Cursor.cpp  Cursor.h  Keyboards.cpp  Keyboards.h
LumaAndroid/: gradle.properties  settings.gradle.kts
LumaAndroid/app/src/main/cpp/: CMakeLists.txt  EngineEntry.h  native-lib.cpp  sdl_env_compat.cpp  sdl_main_wrapper.cpp
Particles/: Affector.h  Emitter.h  ParticleRenderer.cpp  ParticleRenderer.h  Particles.h
Plugins/: PluginManager.cpp  PluginManager.h
Renderer/: Camera.cpp  Camera.h  DeferredRenderer.cpp  DeferredRenderer.h  GraphicsBackend.cpp  GraphicsBackend.h  LightingRenderer.cpp  LightingRenderer.h  RenderBufferManager.cpp  RenderBufferManager.h  RenderComponent.h  RenderSystem.cpp  RenderSystem.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  UICamera.cpp  UICamera.h
Resources/: AssetBundle.cpp  AssetBundle.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h  AssetPacker.cpp  AssetPacker.h  EditorAssetManager.cpp  EditorAssetManager.h  IAssetManager.h  RuntimeAssetManager.cpp  RuntimeAssetManager.h
SDK/: README.md
SDK/examples/embedded/: CMakeLists.txt  README.md  main.cpp
Scripting/: CoreCLRHost.cpp  CoreCLRHost.h  ManagedHost.h  MonoHost.cpp  MonoHost.h  ScriptMetadata.h  ScriptMetadataRegistry.cpp  ScriptMetadataRegistry.h  Template.cs
Shaders/: Common.wgsl  DeferredComposite.wgsl  DeferredLighting.wgsl  Fog.wgsl  GBuffer.wgsl  LightShaft.wgsl  Lighting.wgsl  MathUtils.wgsl  NoiseUtils.wgsl  Particle.wgsl  ParticleCore.wgsl  PostProcess.wgsl  SDFShadow.wgsl  ScreenSpaceShadow.wgsl  Shadow.wgsl  ShadowCore.wgsl  SpriteLit.wgsl  SpriteLitCore.wgsl  ToneMapping.wgsl  compute.wgsl  pixel_physics.wgsl
Systems/: AmbientZoneSystem.cpp  AmbientZoneSystem.h  AnimationSystem.cpp  AnimationSystem.h  AreaLightSystem.cpp  AreaLightSystem.h  AudioSystem.cpp  AudioSystem.h  ButtonSystem.cpp  ButtonSystem.h  CommonUIControlSystem.cpp  CommonUIControlSystem.h  DeferredLightingPass.cpp  DeferredLightingPass.h  HydrateResources.cpp  HydrateResources.h  ISystem.h  IndirectLightingSystem.cpp  IndirectLightingSystem.h  InputTextSystem.cpp  InputTextSystem.h  InteractionSystem.cpp  InteractionSystem.h  LightProbeSystem.cpp  LightProbeSystem.h  LightingMath.h  LightingSystem.cpp  LightingSystem.h  LightmapBaker.cpp  LightmapBaker.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsSystem.cpp  PhysicsSystem.h  PostProcessSystem.cpp  PostProcessSystem.h  QualityManager.cpp  QualityManager.h  ScriptingSystem.cpp  ScriptingSystem.h  (+14 more)
Utils/: AndroidPermissions.cpp  AndroidPermissions.h  BuiltinShaders.cpp  BuiltinShaders.h  CommandQueue.h  Directory.cpp  Directory.h  DynamicArray.cpp  DynamicArray.h  EngineCrypto.h  EngineCyrpto.cpp  FileWatcher.cpp  FileWatcher.h  Guid.cpp  Guid.h  IDEIntegration.cpp  IDEIntegration.h  InspectorUI.cpp  InspectorUI.h  LayerMask.h  LazySingleton.h  Logger.h  PCH.h  Path.cpp  Path.h  PathUtils.cpp  PathUtils.h  Platform.h  PopupManager.cpp  PopupManager.h  Profiler.cpp  Profiler.h  SIMDWrapper.cpp  SIMDWrapper.h  TextEditor.cpp  TextEditor.h  Utils.cpp  Utils.h  imgui_markdown.h  implot.cpp  (+4 more)
cmake/: LumaEngineConfig.cmake
scripts/: package_sdk.ps1
template/: LumaScripting.sln
(+372 files in other folders)
